--- a/app/src/main/res/layout/activity_hasil.xml
+++ b/app/src/main/res/layout/activity_hasil.xml
@@ -12,4 +12,11 @@
     android:orientation="vertical"
     tools:context="id.sch.smktelkom_mlg.learn.intent1.HasilActivity">
 
-    </LinearLayout>
+    <TextView
+        tools:text="Hasil"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewHasil"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:gravity="center"/>
+</LinearLayout>
